@@ -61,6 +61,13 @@ public class Argument extends Editable implements Relatable {
 		this(title, "Unset Description", new ArrayList<RefArg>());
 	}
 
+    /**
+     * Default Constructor. At this time, we do not support creating an argument without
+     * specifying at least a title.
+     */
+	public Argument() {
+	    throw new UnsupportedOperationException("Must specify at least a title for this Argument.");
+    }
 	/**
 	 * Calculates the average of the ratings of all the RefArgs in arguments.
 	 * @return The average of the ratings of all the RefArgs in arguments.
