@@ -43,29 +43,36 @@ Entity Classes:
     Argument:
         - Wrote an equals method.
         - Removed the registerRelation and removeRelation methods.
+        - Added a default constructor.
     Idea:
         - Wrote an equals method.
+        - Added a default constructor.
 
     Library:
         - Wrote the equals method.
+        - Added a default constructor.
 
     Note:
         - Wrote the equals method.
         - Changed getChildren to getEntityChildren.
+        - Added a default constructor.
     RefArg:
 
     Reference:
         - Wrote the equals method.
+        - Added code for generating MLA and APA citations.
+        - Added a default constructor.
     RefIdea:
 
     Theme:
         - Wrote the equals method.
+        - Added a default constructor.
     Topic:
         - Wrote the equals method.
         - Removed the registerRelation and removeRelation methods.
         - Changed getChildren to getEntityChildren.
         - Changed addTheme to registerChild.
-
+        - Added a default constructor.
 Management:
     RefMeisterExec:
 
